[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panoptica"
version = "3.0.0.dev0"
description = "Batched, backend-swappable (numpy or CuPy) instance segmentation metrics."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "numpy>=1.22,<2.3",
    "scipy>=1.10,<2.0.0",
    "connected-components-3d>=3.12.3,<4.0.0",
    "scikit-image>=0.22.0,<1.0.0",
    "pandas>=2.1.0,<3.0.0",
    "plotly>=5.16.1,<6.0.0",
    "rich>=13.6.0,<14.0.0",
    "typer>=0.15.0,<1.0.0",
    "ruamel.yaml>=0.18.6,<1.0.0",
    "tqdm>=4.62.3",
]

[project.optional-dependencies]
cuda = ["cupy>=13,<15"]        # cupy-cuda12x on this host (CuPy 14.0.1 / CUDA 12)
nifti = ["nibabel>=5.1.0,<6.0.0", "pynrrd>=1.1.3,<2.0.0", "SimpleITK>=2.2.2,<3.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.11.0",
    "pyrefly",
    "import-linter>=2.0",
    "pre-commit>=3.5",
]

[project.scripts]
panoptica = "panoptica.api.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["panoptica"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# I (import sorting) is ON — the layered design forbids the old import cycles.
select = ["E", "W", "F", "UP", "B", "I"]
ignore = ["E501", "B905", "B028"]

[tool.pyrefly]
project-includes = ["panoptica"]

[tool.importlinter]
root_package = "panoptica"

[[tool.importlinter.contracts]]
name = "Layered architecture (deps point down only)"
type = "layers"
layers = [
    "panoptica.api",
    "panoptica.pipeline",
    "panoptica.metrics",
    "panoptica.kernels",
    "panoptica.backends",
    "panoptica.io",
    "panoptica.core",
]
